fix(combo-button): children props changed to strings, update snapshots, add truncation classes

--- a/src/components/ComboButton/_mixins.scss
+++ b/src/components/ComboButton/_mixins.scss
@@ -15,11 +15,9 @@
   width: 100%;
 
   & &--primary {
-    flex: 1;
-  }
-
-  * {
     @include text-overflow();
+    display: flex;
+    flex: 1;
   }
 
   & &__overflow-menu {
